Add dates to output and fix days order

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,12 +170,12 @@
     "    values = get_nodes_text(tag, 'span', 'wind-speed')\n",
     "    values = list(map(lambda x: x.replace(',', '.'), values))\n",
     "    values = list(map(float, values))\n",
-    "    return float(format(sum(values) / len(values), '.2f'))"
+    "    return int(sum(values) / len(values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-13, -21, -21, -21, -12, -7, -11, -11, -9, -4] [-2, -9, -10, -6, -5, 0, -3, -5, -2, 0] [4.38, 3.73, 3.08, 2.9, 2.15, 2.33, 2.52, 2.38, 3.23, 3.8] [739, 745, 748, 749, 743, 742, 745, 747, 744, 741]\n"
+      "[-13, -21, -21, -21, -12, -7, -11, -11, -9, -4] [-2, -9, -10, -6, -5, 0, -3, -5, -2, 0] [4, 3, 3, 2, 2, 2, 2, 2, 3, 3] [739, 745, 748, 749, 743, 742, 745, 747, 744, 741]\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "Давление                745       747       744       741  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_preposition(prep, word):\n",
-    "    if prep.lower() == word[0] and word[0] == 'с' or word[0:2] == 'вт':\n",
+    "    if word[0:2] == 'вт':\n",
     "        prep += 'о'\n",
     "    return prep"
    ]
@@ -445,34 +445,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Хотим получить: \"В понедельник в Москве потеплеет на 1 градус по сравнению с четвергом.\""
+    ">Хотим получить: \"В субботу (24 марта) в Москве потеплеет на 6 градусов по сравнению с понедельником (19 марта).\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_advanced_temperature_sample(first_day_index, second_day_index):\n",
     "    assert (first_day_index < second_day_index)\n",
-    "    ft = int((min_temp[first_day_index] + max_temp[first_day_index]) / 2)\n",
-    "    st = int((min_temp[second_day_index] + max_temp[second_day_index]) / 2)\n",
-    "    verb = 'похолодает' if ft > st else 'потеплеет'\n",
-    "    degrees = abs(st - ft)\n",
+    "    assert (first_day_index < len(names) and second_day_index < len(names))\n",
+    "    # Can't use this template with words 'сегодня' and 'завтра'\n",
+    "    assert (first_day_index > 1)\n",
+    "    \n",
+    "    first_temperature = int((min_temp[first_day_index] + max_temp[first_day_index]) / 2)\n",
+    "    second_temperature = int((min_temp[second_day_index] + max_temp[second_day_index]) / 2)\n",
+    "    verb = 'похолодает' if first_temperature > second_temperature else 'потеплеет'\n",
+    "    degrees = abs(first_temperature - second_temperature)\n",
+    "    \n",
     "    degrees_word = 'градусы'\n",
     "    correct_degrees_word = morph.parse(degrees_word)[0].make_agree_with_number(degrees).word\n",
-    "    fd = morph.parse(names[first_day_index])[0].inflect({'accs'}).word\n",
-    "    fp = generate_preposition('В', fd)\n",
+    "    \n",
+    "    first_day = morph.parse(names[first_day_index])[0].inflect({'ablt'}).word\n",
+    "    first_day_prep = generate_preposition('с', first_day)\n",
+    "    first_day_date = ' '.join([days[first_day_index], months[first_day_index]])\n",
+    "    \n",
     "    parsed_city = morph.parse(city)[0].inflect({'datv'}).word.capitalize()\n",
-    "    sp = generate_preposition('в', parsed_city)\n",
-    "    sd = morph.parse(names[second_day_index])[0].inflect({'ablt'}).word\n",
-    "    tp = generate_preposition('с', sd)\n",
-    "\n",
-    "    if degrees == 0:\n",
-    "        return f'{fp} {fd} {sp} {parsed_city} температура не изменится по сравнению {tp} {sd}.'\n",
-    "\n",
-    "    return f'{fp} {fd} {sp} {parsed_city} {verb} на {degrees} {correct_degrees_word} по сравнению {tp} {sd}.'"
+    "    city_prep = generate_preposition('в', parsed_city)\n",
+    "    \n",
+    "    second_day = morph.parse(names[second_day_index])[0].inflect({'accs'}).word\n",
+    "    second_day_prep = generate_preposition('В', second_day)\n",
+    "    second_day_date = ' '.join([days[second_day_index], months[second_day_index]])\n",
+    "    \n",
+    "    action = 'температура не изменится' if degrees == 0 else  f'{verb} на {degrees} {correct_degrees_word}'\n",
+    "   \n",
+    "    return f'{second_day_prep} {second_day} ({second_day_date}) {city_prep} {parsed_city} {action} ' \\\n",
+    "            f'по сравнению {first_day_prep} {first_day} ({first_day_date}).'"
    ]
   },
   {
@@ -486,20 +496,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Различие в обработки дней связано с тем, что яндекс для текущего дня подставляет 'сегодня', поэтому предлог не требуется. Аналогичный разбор случая с 'завтра'"
+    ">Различие в обработки дней связано с тем, что яндекс для текущего дня подставляет 'сегодня', поэтому предлог не требуется. Аналогичный разбор случая с 'завтра'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_simple_pressure_sample(i):\n",
+    "    assert (i < len(names))\n",
     "    day = names[i]\n",
     "    if i >= 2:\n",
     "        parsed_day = morph.parse(day)[0]\n",
-    "        day = generate_preposition('В', day) + ' ' + parsed_day.inflect({'accs'}).word\n",
+    "        day = ' '.join([generate_preposition('В', day), parsed_day.inflect({'accs'}).word])\n",
     "    else:\n",
     "        day = day.capitalize()\n",
     "    num = pressure[i]\n",
@@ -511,63 +522,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Хотим получить: \"В воскресенье скорость ветра изменится на 1 киллометр в час по сравнению с пятницей.\""
+    ">Хотим получить: \"В субботу (24 марта) скорость ветра изменится на 1 киллометр в час по сравнению с понедельником (19 марта).\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_wind_speed_sample(fi, si):\n",
     "    assert (fi < si)\n",
+    "    assert (fi < si)\n",
+    "    assert (fi < len(names) and si < len(names))\n",
+    "    # Can't use this template with words 'сегодня' and 'завтра'\n",
+    "    assert (fi > 1)\n",
+    "    \n",
     "    speed = abs(int(wind_speed[si] - wind_speed[fi]))\n",
-    "\n",
-    "    fprep = generate_preposition('В', names[fi])\n",
-    "    sprep = generate_preposition('с', names[si])\n",
-    "    fd = morph.parse(names[fi])[0].inflect({'accs'}).word\n",
-    "    sd = morph.parse(names[si])[0].inflect({'ablt'}).word\n",
+    "    \n",
+    "    first_day = morph.parse(names[fi])[0].inflect({'ablt'}).word\n",
+    "    first_day_prep = generate_preposition('с', first_day)\n",
+    "    first_day_date = ' '.join([days[fi], months[fi]])\n",
+    "    \n",
+    "    second_day = morph.parse(names[si])[0].inflect({'accs'}).word\n",
+    "    second_day_prep = generate_preposition('В', second_day)\n",
+    "    second_day_date = ' '.join([days[si], months[si]])\n",
+    "    \n",
     "    km = morph.parse('киллометры')[0].make_agree_with_number(speed).word\n",
     "\n",
-    "    return f'{fprep} {fd} скорость ветра изменится на {speed} {km} в час по сравнению {sprep} {sd}.'"
+    "    return f'{second_day_prep} {second_day} ({second_day_date}) скорость ветра изменится на ' \\\n",
+    "        f'{speed} {km} в час по сравнению {first_day_prep} {first_day} ({first_day_date}).'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Хотим получить:\"В ближайшие 10 дней в Москве максимальная температура будет составлять 0 градусов.\""
+    ">Хотим получить: \"В ближайшие 10 дней в Москве максимальная температура будет составлять 0 градусов.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_max_temp():\n",
     "    days_number = len(days)\n",
     "    day_word = morph.parse('дней')[0].make_agree_with_number(days_number).word\n",
+    "    \n",
     "    parsed_city = morph.parse(city)[0].inflect({'datv'}).word.capitalize()\n",
-    "    fp = generate_preposition('в', parsed_city)\n",
+    "    city_prep = generate_preposition('в', parsed_city)\n",
+    "    \n",
     "    num = max(max_temp)\n",
     "    degree = morph.parse('градусы')[0].make_agree_with_number(num).word\n",
-    "    return f'В ближайшие {days_number} {day_word} {fp} {parsed_city} максимальная температура будет составлять {num} {degree}.'"
+    "    \n",
+    "    return f'В ближайшие {days_number} {day_word} {city_prep} {parsed_city} ' \\\n",
+    "        f'максимальная температура будет составлять {num} {degree}.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'В воскресенье в Москве потеплеет на 6 градусов по сравнению со средой.'"
+       "'В субботу (24 марта) в Москве потеплеет на 6 градусов по сравнению с понедельником (19 марта).'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,16 +603,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'В четверг давление будет составлять 747 милимметров ртутного столба.'"
+       "'Сегодня давление будет составлять 739 милимметров ртутного столба.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,16 +623,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'В воскресенье скорость ветра изменится на 0 киллометров в час по сравнению со субботой.'"
+       "'В субботу (24 марта) скорость ветра изменится на 1 киллометр в час по сравнению с понедельником (19 марта).'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +652,7 @@
        "'В ближайшие 10 дней в Москве максимальная температура будет составлять 0 градусов.'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">В качестве разнообразия можно вместо простых предложений использовать составные, попутно добавляя обстоятельства, например причастные и деепричастные обороты. Можно добавить вводные слова, до По факту мы просто объединяем несколько шаблонов вместе, тем самым порождая все больше новых конструкций. Соответственно следующий шагом напрашивается создать небольшую базу шаблонов для каждой части предложения. При генерации нового ответа можно случайно выбирать отдельные \"модули\" и согласовывать их между собой."
+    ">В качестве разнообразия можно вместо простых предложений использовать составные, попутно добавляя обстоятельства, например причастные и деепричастные обороты. Можно добавить вводные слова, либо фразы, добавляющие уважительную окраску предложению. По факту мы просто объединяем несколько шаблонов вместе, тем самым порождая все больше новых конструкций. Соответственно следующий шагом напрашивается создать небольшую базу шаблонов для каждой части предложения. При генерации нового ответа можно случайно выбирать отдельные \"модули\" и согласовывать их между собой."
    ]
   },
   {
