First step of last part

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -730,7 +730,8 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -961,6 +962,192 @@
     "### Часть 5 [2 балла] Анализ ошибок\n",
     "1. Привидите примеры из тестового множества, на которых нейронная сеть ошибается. Объясните, почему возникают ошибки.\n",
     "2. Протестируйте нейронную сеть на произвольном предложении (не из тестовых данных). Возникают ли ошибки? Почему?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Обучаем модель с оптимальными параметрами"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 315319 samples, validate on 35036 samples\n",
+      "Epoch 1/1000\n",
+      "315319/315319 [==============================] - 20s 65us/step - loss: 0.4352 - acc: 0.8603 - val_loss: 0.4183 - val_acc: 0.8577\n",
+      "Epoch 2/1000\n",
+      "315319/315319 [==============================] - 19s 62us/step - loss: 0.2963 - acc: 0.8989 - val_loss: 0.4002 - val_acc: 0.8628\n",
+      "Epoch 3/1000\n",
+      "315319/315319 [==============================] - 20s 63us/step - loss: 0.2678 - acc: 0.9072 - val_loss: 0.3870 - val_acc: 0.8697\n",
+      "Epoch 4/1000\n",
+      "315319/315319 [==============================] - 20s 63us/step - loss: 0.2460 - acc: 0.9146 - val_loss: 0.3768 - val_acc: 0.8731\n",
+      "Epoch 5/1000\n",
+      "315319/315319 [==============================] - 20s 63us/step - loss: 0.2280 - acc: 0.9212 - val_loss: 0.3760 - val_acc: 0.8739\n",
+      "Epoch 6/1000\n",
+      "315319/315319 [==============================] - 19s 62us/step - loss: 0.2116 - acc: 0.9261 - val_loss: 0.3774 - val_acc: 0.8734\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x18b5f5228d0>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = build_model(n_h, k, 'sigmoid')\n",
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])\n",
+    "model.fit(X_train, Y_train, batch_size=64, epochs=1000, validation_split=0.1, \\\n",
+    "      callbacks=[keras.callbacks.EarlyStopping('val_acc')])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Функция тестирования модели на размеченном предложении: возвращает долю ошибок в этом предложении и список строк с описаниями ошибок"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def test_model_on_tagged_sentence(model, sent):\n",
+    "    features, labels = prepare_dataset([sent], word_to_idx, embeddings, pos_idx, k)\n",
+    "    predicted_labels = model.predict_classes(features)\n",
+    "    sent_predictions = list(map( lambda x: all_pos[x], predicted_labels))\n",
+    "    sent_accuracy = sum(predicted_labels == labels) / len(labels)\n",
+    "    errors = []\n",
+    "    for tagged, prediction in zip(sent, sent_predictions):\n",
+    "        word, actual = tagged\n",
+    "        if actual != prediction:\n",
+    "            errors.append(\"Word %s: Expected %s Prediction %s\" % (word, actual, prediction))\n",
+    "    return errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def print_sent(tagged_sent):\n",
+    "    words = []\n",
+    "    for word, _ in tagged_sent:\n",
+    "        words.append(word)\n",
+    "    print(' '.join(words))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Отберем достаточно длинные предложения (не менее 7 слов), на которых модель допускает не менее 4 ошибок"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "results = []\n",
+    "for sent in TEST:\n",
+    "    if len(sent) < 7:\n",
+    "        continue\n",
+    "    errors = test_model_on_tagged_sentence(model, sent)\n",
+    "    if len(errors) >= 4:\n",
+    "        results.append((sent, errors))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Посмотрим на результаты 3 таких предложений"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кажется сомнительным , что те « приёмы » в работе , которые студенты используют для обхода ошибок , наличествующих в используемом СГА проприетарном ПО , соответствуют миссии СГА — предоставлению образования высшего качества .\n",
+      "Word используемом: Expected ADJ Prediction NOUN\n",
+      "Word СГА: Expected PROPN Prediction NOUN\n",
+      "Word проприетарном: Expected ADJ Prediction VERB\n",
+      "Word ПО: Expected NOUN Prediction ADP\n",
+      "Word СГА: Expected PROPN Prediction X\n",
+      "Word предоставлению: Expected NOUN Prediction ADJ\n",
+      "\n",
+      "Из-за мелких размеров постройки / проходы гнезда незаметны , обитают в естественных полостях почвы , фураж осуществляют в почве и листовом опаде .\n",
+      "Word Из-за: Expected ADP Prediction NUM\n",
+      "Word незаметны: Expected ADJ Prediction NOUN\n",
+      "Word полостях: Expected NOUN Prediction ADJ\n",
+      "Word фураж: Expected NOUN Prediction ADJ\n",
+      "Word опаде: Expected X Prediction NOUN\n",
+      "\n",
+      "Традиция признаёт Цзо чжуань комментарием к летописи Чунь цю , однако трактовка и подробности событий не совпадают с летописью и другими комментариями .\n",
+      "Word Цзо: Expected X Prediction PUNCT\n",
+      "Word чжуань: Expected X Prediction DET\n",
+      "Word комментарием: Expected NOUN Prediction ADJ\n",
+      "Word цю: Expected X Prediction PROPN\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import shuffle\n",
+    "shuffle(results)\n",
+    "for sent, errors in results[:3]:\n",
+    "    print_sent(sent)\n",
+    "    for error in errors:\n",
+    "        print(error)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Во всех 3 предложениях ошибки возникают в основном на словах, которых нет в 50000 самых популярных слов из таблицы эмбеддингов - иногда из-за редкости самого слова, а иногда из-за редкости конкретной словоформы, а информации из левого и правого контекста недостаточно для однозначного определения части речи. Исключением является разве что слово \"комментарием\" из 3-его предложения, в нем судя по всему ошибка связана с тем, что в левом контексте оба слова с неизвестным эмбеддингом."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Протестируем модель на произвольном предложении не из выборки"
    ]
   },
   {
