Final fixes and additions

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -4,26 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Домашнее задание 3 [10 баллов] \n",
-    "# До 30.04.18 23:59\n",
-    "\n",
-    "Задание выполняется в группе (1-4 человека). В случае использования какого-либо строннего источника информации обязательно дайте на него ссылку (поскольку другие тоже могут на него наткнуться). Плагиат наказывается нулём баллов за задание и предвзятым отношением в будущем.\n",
-    "\n",
-    "Не все части обязательны для выполнения, однако вы можете быть дополнительно оштрафованы за небрежное за выполнение одной или двух частей вместо четырех.\n",
-    "\n",
-    "При возниконовении проблем с выполнением задания обращайтесь с вопросами к преподавателю. Поэтому настоятельно рекомендуется выполнять задание заранее, оставив запас времени на всевозможные технические проблемы. Если вы начали читать условие в последний вечер и не успели из-за проблем с установкой какой-либо библиотеки — это ваши проблемы.\n",
-    "\n",
-    "\n",
-    "Результат выполнения задания — это отчёт в формате html на основе Jupyter Notebook. Нормальный отчёт должен включать в себя:\n",
-    "* Краткую постановку задачи и формулировку задания\n",
-    "* Описание **минимума** необходимой теории и/или описание используемых инструментов - не стоит переписывать лекции или Википедию\n",
-    "* Подробный пошаговый рассказ о проделанной работе\n",
-    "* Аккуратно оформленные результаты\n",
-    "* **Внятные выводы** – не стоит относится к домашнему заданию как к последовательности сугубо технических шагов, а стоит относится скорее как к небольшому практическому исследованию, у которого есть своя цель и свое назначение.\n",
-    "\n",
-    "Небрежное его оформление отчета существенно отразится на итоговой оценке. Весь код из отчёта должен быть воспроизводимым, если для этого нужны какие-то дополнительные действия, установленные модули и т.п. — всё это должно быть прописано в тексте в явном виде.\n",
-    "\n",
-    "Сдача отчетов осуществляется через систему AnyTask.\n"
+    "# Домашнее задание 2"
    ]
   },
   {
@@ -333,6 +314,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Функция построения модели с фиксированными параметрами n_k, k и данной функцией активации"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -348,6 +336,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Возьмем 128 нейронов для скрытого слоя с функцией активации relu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
@@ -356,6 +351,13 @@
    "outputs": [],
    "source": [
     "model = build_model(128, k, 'relu')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Компилируем и обучаем модель"
    ]
   },
   {
@@ -458,6 +460,13 @@
     "* $\\theta$ – вид функции активации.\n",
     "\n",
     "Оцените их влияние на качество модели. Как увеличение окна или числа нейронов влияет на итоговый показатель качества? Зависит ли итоговый показатель качества от функции активации на скрытом слое? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Заведем функции для тестирования качества обученной модели на данном датасете и для датасета с данным k (где этот датасет сначала формируется)"
    ]
   },
   {
@@ -595,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Можно видеть, что использование окна шириной 3 заметно лучше чем единичное окно, однако дальнейшее увеличение не приводит к сильному росту качества. Тем не менее есть некоторый прирост при k=5, дальше качество не растет, так что используем k=5"
+    "Можно видеть, что использование окна шириной 3 заметно лучше чем единичное окно, однако дальнейшее увеличение не приводит к сильному росту качества. Тем не менее есть некоторый прирост при k=5, дальше качество уже не растет, а уменьшается, так что используем k=5"
    ]
   },
   {
@@ -1140,24 +1149,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Во всех 3 предложениях ошибки возникают в основном на словах, которых нет в 50000 самых популярных слов из таблицы эмбеддингов - иногда из-за редкости самого слова, а иногда из-за редкости конкретной словоформы, а информации из левого и правого контекста недостаточно для однозначного определения части речи. Исключением является разве что слово \"комментарием\" из 3-его предложения, в нем судя по всему ошибка связана с тем, что в левом контексте оба слова с неизвестным эмбеддингом."
+    "Посмотрим на наличие для слов на которых появляются ошибки эмбеддингов в нашей таблице"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word используемом has embedding False\n",
+      "Word СГА has embedding False\n",
+      "Word проприетарном has embedding False\n",
+      "Word ПО has embedding True\n",
+      "Word СГА has embedding False\n",
+      "Word предоставлению has embedding False\n",
+      "Word Из-за has embedding False\n",
+      "Word незаметны has embedding False\n",
+      "Word полостях has embedding False\n",
+      "Word фураж has embedding False\n",
+      "Word опаде has embedding False\n",
+      "Word Цзо has embedding False\n",
+      "Word чжуань has embedding False\n",
+      "Word комментарием has embedding True\n",
+      "Word цю has embedding False\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = ['используемом', 'СГА', 'проприетарном', 'ПО', 'СГА', \n",
+    "         'предоставлению', 'Из-за', 'незаметны', 'полостях', 'фураж', \n",
+    "         'опаде', 'Цзо', 'чжуань', 'комментарием', 'цю']\n",
+    "for word in words:\n",
+    "    print(\"Word %s has embedding %s\" %( word, word.lower() in word_to_idx ))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Протестируем модель на произвольном предложении не из выборки"
+    "Во всех 3 предложениях ошибки возникают в основном на словах, которых нет в 50000 самых популярных слов из таблицы эмбеддингов - иногда из-за редкости самого слова, а иногда из-за редкости конкретной словоформы, а информации из левого и правого контекста недостаточно для однозначного определения части речи. Исключением является разве что слово \"комментарием\" из 3-его предложения, в нем судя по всему ошибка связана с тем, что в левом контексте оба слова с неизвестным эмбеддингом. Еще ошибка на слове \"ПО\" в первом предложении связана с тем, что регистр не учитывается, а в нижнем регистре это скорее предлог."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Протестируем модель на произвольном предложении не из выборки."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Протестируем модель на произвольном предложении не из выборки .\n",
+      "1\n",
+      "Word Протестируем: Expected VERB Prediction ADJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = [('Протестируем', 'VERB'), \n",
+    "        ('модель', 'NOUN'), \n",
+    "        ('на', 'ADP'), \n",
+    "        ('произвольном', 'ADJ'), \n",
+    "        ('предложении', 'NOUN'), \n",
+    "        ('не', 'PART'),\n",
+    "        ('из', 'ADP'),\n",
+    "        ('выборки', 'NOUN'), \n",
+    "        ('.', 'PUNCT')]\n",
+    "errors = test_model_on_tagged_sentence(model, sent)\n",
+    "print_sent(sent)\n",
+    "print(len(errors))\n",
+    "for error in errors:\n",
+    "    print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'протестируем' in word_to_idx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Как видно ошибка возникает только на одном слове, для которого тоже нет эмбеддинга в отобранном множестве"
+   ]
   }
  ],
  "metadata": {
