--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -388,24 +388,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 283, 300) [5, 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for res in add_zeros_to_batch(embeddings[:3], grades[:3], 2):\n",
-    "    print(res[0].shape, res[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 50,
    "metadata": {
     "scrolled": false
@@ -506,7 +488,12 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/1\n",
-      "8/8 [==============================] - 1s 94ms/step - loss: 1.3204 - acc: 0.5664\n"
+      "8/8 [==============================] - 1s 96ms/step - loss: 1.3179 - acc: 0.5664\n",
+      "Epoch 1/1\n",
+      "8/8 [==============================] - 1s 99ms/step - loss: 1.5021 - acc: 0.3359\n",
+      "Step 1: accuracy on test 0.5341\n",
+      "Epoch 1/1\n",
+      "8/8 [==============================] - 1s 102ms/step - loss: 1.4725 - acc: 0.2383\n"
      ]
     }
    ],
@@ -532,7 +519,7 @@
     "    # get max predicted probability on each case\n",
     "    predicted_max = predicted.max(axis=1)\n",
     "    # get batch with the least max probability\n",
-    "    batch_mask = remaining_samples[predicted_max.argsort()[:BATCH_SIZE]]\n",
+    "    batch_mask = remaining_samples[predicted_max.argsort()[:AL_BATCH_SIZE]]\n",
     "    # fit model\n",
     "    active_learning_model.fit_generator(add_zeros_to_batch(X_train[batch_mask], y_train[batch_mask], KERAS_BATCH_SIZE), \n",
     "                                 steps_per_epoch= AL_BATCH_SIZE // KERAS_BATCH_SIZE)\n",
@@ -544,36 +531,6 @@
     "                                                   workers=8)[1]\n",
     "    accuracies.append(acc)\n",
     "    print('Step %d: accuracy on test %.4f' % (step + 1, acc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted = active_learning_model.predict_generator(add_zeros_to_batch(X_train[chosen], y_train[chosen], KERAS_BATCH_SIZE), \n",
-    "                                 steps= AL_BATCH_SIZE // KERAS_BATCH_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(256, 5)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted.shape"
    ]
   },
   {
