--- a/hw3_fully_connected.ipynb
+++ b/hw3_fully_connected.ipynb
@@ -234,9 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Будем использовать предобученные fastText эмбеддинги из второго задания.\n",
-    "\n",
-    "> Если использовать бинарную модель, то она будет эмбеддинги для слов, которых нет в словаре, тем самым позволив использовать слова с опечатками."
+    "> Будем использовать предобученные fastText эмбеддинги из второго задания."
    ]
   },
   {
